# chant

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  BOOTSTRAP_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  PLAN_MODE_AUDIT.md  README.md  SECURITY.md  build.rs  chant.json  hello.txt  justfile
.chant/: .gitignore  config.md
.chant/archive/: 2026-01-24-002-u0g.md  2026-01-24-005-n95.md  2026-01-24-008-19q.md  2026-01-24-00a-f6z.md  2026-01-24-00f-025.md  2026-01-24-00g-it2.md  2026-01-24-00l-rws.md  2026-01-24-00m-khh.md  2026-01-24-00o-6w7.md  2026-01-24-00t-6m6.md  2026-01-24-00v-6zj.md  2026-01-24-00x-1fz.md  2026-01-24-00y-ayy.md  2026-01-24-00z-87n.md  2026-01-24-010-zle.md  2026-01-24-014-sp3.md  2026-01-24-018-8db.md  2026-01-24-01e-o0l.3.md  2026-01-24-01e-o0l.md  2026-01-24-01l-ahr.md  2026-01-24-01m-q7e.md  2026-01-24-01n-svn.md  2026-01-24-01w-c0d.md  2026-01-24-01x-v06.1.md  2026-01-24-01x-v06.4.md  2026-01-24-01y-73b.2.md  2026-01-24-01z-893.md  2026-01-24-022-9qb.md  2026-01-24-028-u08.md  2026-01-26-00c-zoe.md  2026-01-30-00f-gqz.md  2026-01-30-00g-iwz.1.md  2026-01-30-00g-iwz.6.md  2026-01-31-002-rkq.md  2026-01-31-005-10i.md  2026-02-01-001-9tc.md  2026-02-01-002-91g.6.md  2026-02-01-002-9pu.md  2026-02-01-003-cx1.md  2026-02-01-004-op8.md  (+167 more)
.chant/processes/: 2026-02-03-01b-h9e-53871.json  2026-02-03-01f-gxx-53896.json
.chant/prompts/: bootstrap.md  documentation.md  driver.md  implement.md  merge-conflict.md  parallel-cleanup.md  release.md  reproduce.md  research-analysis.md  split.md  standard.md
.chant/research/: guide-evaluation.md
.chant/specs/: .chant-status-2026-02-06-001-wny.json  .chant-status-2026-02-06-003-52q.json  .chant-status-2026-02-06-003-umg.json  .chant-status-2026-02-06-004-hql.json  .chant-status-2026-02-06-004-wm0.json  .chant-status-2026-02-06-005-l4h.json  .chant-status-2026-02-06-005-p16.json  .chant-status-2026-02-06-006-6rc.json  .chant-status-2026-02-06-007-mrk.json  .chant-status-2026-02-06-008-zbd.json  (+766 more)
.chant/templates/: bug-fix.md
.github/: pull_request_template.md
coverage/: tarpaulin-report.html
docs/: FEATURE_STATUS.md  README.md  SUMMARY.md  book.toml  doc-audit-map.toml  roadmap.md
examples/: README.md  test-examples.sh
prompts/: document.md  implement.md  reproduce.md  research-synthesis.md  research.md  review.md  split.md  standard.md  triage.md
scoop/: README.md
scripts/: doc-audit.sh  test-docs.sh  validate-quickstart.sh
src/: agent.rs  cli.rs  config.rs  conflict.rs  deps.rs  derivation.rs  diagnose.rs  formatters.rs  git.rs  git_ops.rs  id.rs  lib.rs  lock.rs  main.rs  mcp.rs  merge.rs  merge_driver.rs  merge_errors.rs  pid.rs  prompt.rs  prompts.rs  provider.rs  render.rs  replay.rs  retry.rs  scoring.rs  spec.rs  spec_group.rs  spec_template.rs  status.rs  takeover.rs  templates.rs  tools.rs  ui.rs  validation.rs  worktree.rs
templates/: agent-amazonq.md  agent-claude.md  agent-cursor.md  agent-generic.md  agent-kiro.md  chant-section-mcp.md  chant-section.md  skill-chant.md
tests/: common.rs  integration_tests.rs  test_archive.rs  test_commands.rs  test_in_progress_status.rs  test_integration_config.rs  test_integration_dependency.rs  test_integration_spec_lifecycle.rs  test_integration_watch_recovery.rs  test_integration_workflow.rs  test_integration_worktree.rs  test_mcp_handlers.rs  test_mcp_protocol.rs  test_mcp_spec_list_archive.rs  test_multi_repo.rs  test_parallel_work.rs  test_spec_lifecycle.rs  test_state_machine_lifecycle.rs  test_takeover.rs
(+741 files in other folders)
