[package]
name = "chant"
version = "0.3.0"
edition = "2021"
description = "Intent Driven Development"
license = "MIT"
repository = "https://github.com/chant-dev/chant"

[lib]
name = "chant"
path = "src/lib.rs"

[[bin]]
name = "chant"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
atty = "0.2"
dialoguer = "0.11"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pulldown-cmark = "0.10"

# Utilities
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
regex = "1.10"
shellexpand = "3.0"

# HTTP Client (rustls for cross-platform, no system OpenSSL needed)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

glob = "0.3"
url = "2"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
