[package]
name = "chant-cli"
version = "0.21.1"
edition = "2021"
description = "Spec execution platform for AI-assisted development"
license = "Apache-2.0"
repository = "https://github.com/lex00/chant"
homepage = "https://lex00.github.io/chant"
documentation = "https://lex00.github.io/chant"
readme = "README.md"
keywords = ["cli", "ai", "automation", "developer-tools", "agents"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".chant/", ".github/", "docs/", "examples/", "scripts/", "*.log"]

[lib]
name = "chant"
path = "src/lib.rs"

[[bin]]
name = "chant"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
clap_mangen = "0.2"
colored = "2.0"
atty = "0.2"
dialoguer = "0.11"
indicatif = "0.17"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pulldown-cmark = "0.10"

# Utilities
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"
dirs = "5.0"
rand = "0.8"
regex = "1.10"
shellexpand = "3.0"

# HTTP Client (rustls for cross-platform, no system OpenSSL needed)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

glob = "0.3"
url = "2"
tempfile = "3.0"
jsonschema = "0.26"

# Templating
tera = "1.20"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
serial_test = "3.0"
